force-app/main/default/objects/custom_create389__c/custom_create389__c.object-meta.xml
<CustomObject>
    <label>Custom created object389</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects389</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>