force-app/main/default/objects/custom_create389__c/fields/custom_create_389field508__c.field-meta.xml
<CustomField>
    <fullName>custom_create_389field508__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 389field508</label>
    <type>Checkbox</type>
</CustomField>